# Messenger

./: .gitignore  docker-compose.yml  init.sql
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  schema.rs
backend/src/handlers/: mod.rs
backend/src/models/: mod.rs
backend/src/utils/: mod.rs
backend/static/: conversation.html  dashboard.html  login.html  register.html
checker/: checker.py  dm_api.py  messenger_api.py  requirements.txt
service/: docker-compose.yml  init.sql
service/backend/: Dockerfile
service/backend/src/: main.rs
service/backend/src/db/: mod.rs
service/backend/src/handlers/: mod.rs
service/backend/src/models/: mod.rs
service/backend/static/: conversation.html  dashboard.html  login.html  register.html
writeup/: attack_data.json  sploit1.py
writeup/sploit2/: Cargo.toml
writeup/sploit2/src/: main.rs
