[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0", features = ["postgres", "r2d2", "chrono", "serde_json"] }
dotenv = "0.15"
bcrypt = "0.12"
tokio = { version = "1", features = ["full"] }