[package]
name = "sploit2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
uuid = "1.3"
actix-web = "4.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }